--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "find-your-movie",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://find-your-movie.github.io",
+  "homepage": "https://minezee.github.io/find-your-movie",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
