--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "find-your-movie",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "homepage": "https://minezee.github.io/find-your-movie",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
